### Fix: Vaccines were too big on the nurse vaccine page

--- a/cpsc471-project/tracker/static/tracker/nurse_vaccines.css
+++ b/cpsc471-project/tracker/static/tracker/nurse_vaccines.css
@@ -29,7 +29,7 @@ li {
   height: auto;
   float: right;
   display: block;
-  max-width: 150px;
+  max-width: 100px;
 }
 
 .button {
